<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <groupId>tp</groupId>
  <artifactId>withVectorApi</artifactId>
  <version>0.0.1-SNAPSHOT</version>
  
  <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <!-- version du jdk : 1.6 , 1.7 , 1.8 
         puis 9 , 10 , 11 , ..., 17, ... -->
    <!--  <java.version>11</java.version> -->
     <java.version>17</java.version> 
        
     <maven.compiler.target>${java.version}</maven.compiler.target>
     <maven.compiler.source>${java.version}</maven.compiler.source>
  </properties>
  
  <dependencies>
		 
  </dependencies>

  
  <build>
    <pluginManagement>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.8.1</version>
                <configuration>
                    <release>${java.version}</release>
                    <source>${java.version}</source>
                    <target>${java.version}</target> 
                    <compilerArgs>--enable-preview</compilerArgs>  
                </configuration>
            </plugin>
          </plugins>  
    </pluginManagement>
</build>
  
</project>